# fastapi_macros_elitecaps

./: pyproject.toml
