[tool.poetry]
name = "fastapi-macros-elitecaps"
version = "0.1.0"
description = ""
authors = ["Main Admin <roman.kalashnikov.kazan@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_macros_elitecaps"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
